--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -5,13 +5,11 @@
 body {
   position: relative;
   color: white;
+  min-width: 400px;
   height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #864fe1, #1797d2, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 20s ease infinite;
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
@@ -19,44 +17,29 @@ body {
   align-items: center;
 }
 
-button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+
+  50% {
+      background-position: 100% 50%;
+  }
+
+  100% {
+      background-position: 0% 50%;
+  }
 }
 
-button:hover {
-  transform: scale(1.05);
-  opacity: 1;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.Hello {
+.container {
   display: flex;
   justify-content: center;
-  align-items: center;
   margin: 20px 0;
 }
+
+p {
+  margin: 0;
+}
+
+
+
